[gd_scene load_steps=2 format=3 uid="uid://pausemenu001"]

[ext_resource type="Script" path="res://CoreGameplay/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Spacer2" type="Control" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="RestartButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Spacer3" type="Control" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
